# terminal-guitar-tuner

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
Formula/: terminal-guitar-tuner.rb
src/: guitar.rs  lib.rs  pitch_detector.rs  recorder.rs
src/ui/: app_color.rs  app_state.rs  audio_graph.rs  instructions.rs  insufficient_size_notice.rs  loading_icon.rs  mod.rs  tuning_bar.rs  tuning_notes.rs  tuning_pegs.rs  utils.rs
test/fixtures/: B3_pcm  D3_pcm  E2_pcm  E4_pcm  G3_pcm
