[package]
name = "terminal_guitar_tuner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15"
anyhow = "1.0"
apodize = "1.0"
rand = "0.8.5"
ratatui = "0.23.0"
crossterm = "0.27.0"
regex = "1.10.1"
itertools = "0.11.0"
lazy_static = "1.4.0"
